--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Blog
+APP_NAME=blog
 APP_ENV=local
 APP_KEY=base64:+IW7vcOES38DxUjrjFX8PZrqt1KNttKn2efGGp7Pbrk=
 APP_DEBUG=true
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql_blog
 DB_PORT=3306
 DB_DATABASE=blog
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=1234
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
