--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,44 +1,44 @@
 version: '3.7'
 
 services:
-  apache:
-    build: ./apache
-    image: apache_blog
-    container_name: apache_blog
-    restart: always
-    ports: 
-      - 80:80
-    networks:
-      - frontend
-      - backend
-    volumes:
-      - ./../:/usr/local/apache2/htdocs
-    depends_on:
-      - php
-      - mysql
-  php:
-    build: ./php
-    image: php_blog
-    container_name: php_blog
-    restart: always
-    networks:
-      - backend
-    volumes:
-      - ./../:/var/www/html
-  mysql:
-    build: ./mysql
-    image: mysql_blog
-    container_name: mysql_blog
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: blog
-    networks:
-      - backend
-    volumes:
-      - ./database:/var/lib/mysql
+    apache:
+        build: ./apache
+        image: apache_blog
+        container_name: apache_blog
+        restart: unless-stopped
+        ports:
+            - 80:80
+        networks:
+            - frontend
+            - backend
+        volumes:
+            - ./../:/usr/local/apache2/htdocs
+        depends_on:
+            - php
+            - mysql
+    php:
+        build: ./php
+        image: php_blog
+        container_name: php_blog
+        restart: unless-stopped
+        networks:
+            - backend
+        volumes:
+            - ./../:/var/www/html
+    mysql:
+        build: ./mysql
+        image: mysql_blog
+        container_name: mysql_blog
+        command: --default-authentication-plugin=mysql_native_password
+        restart: unless-stopped
+        environment:
+            MYSQL_ROOT_PASSWORD: 1234
+            MYSQL_DATABASE: blog
+        networks:
+            - backend
+        volumes:
+            - ./database:/var/lib/mysql
 
 networks:
-  backend:
-  frontend:
+    backend:
+    frontend:
