--- a/.docker/.gitignore
+++ b/.docker/.gitignore
@@ -1,7 +1,7 @@
 #copy it to the root of the project
 #You can't commit empty folders in git, there's a workaround
 # exclude everything
-**/docker/database/*
+**/.docker/database/*
 
 # exception to the rule
-!**/docker/database/.gitkeep 
+!**/.docker/database/.gitkeep 
